# Visual-Studio-Code-WxWidgets

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: main.cpp
